<resources>
    <string name="app_name">FootMatch</string>
    <string name="titulo_partido">Partido</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="stats">ESTADÍSTICAS</string>
    <string name="events">EVENTOS</string>
    <string name="referees">ÁRBITROS</string>
    <string name="alineations">ALINEACIÓN</string>
    <string name="clasification">CLASIFICACIÓN</string>
    <string name="premier_league_jornada_10">PREMIER LEAGUE JORNADA 10</string>
    <string name="barcelona">BARCELONA</string>
    <string name="bernabeu">ESTADIO SANTIAGO BERNABÉU</string>
    <string name="madrid">REAL MADRID</string>
    <string name="finalizado">FINALIZADO</string>
    <string name="resultado">1 - 2</string>
    <string name="fecha">2023-12-10</string>
    <string name="liga_ea_sports_jornada_10">LIGA EASPORTS JORNADA 10</string>
    <string name="camp_nou">Estadio: CAMP NOU</string>
    <string name="n_mero_de_victorias">Número de victorias</string>
    <string name="n_mero_de_derrotas">Número de derrotas</string>
    <string name="n_mero_de_empates">Número de empates</string>
    <string name="no_disponible">NO DISPONIBLE</string>
    <string name="leyenda">LEYENDA</string>
    <string name="bota">Bota</string>
    <string name="tarjeta_amarilla">Tarjeta Amarilla</string>
    <string name="tarjeta_roja">Tarjeta Roja</string>
    <string name="sustituci_n">Sustitución</string>
    <string name="lesi_n">Lesión</string>
    <string name="asistencia">Asistencia</string>
    <string name="gol">Gol</string>
    <string name="var">VAR</string>
    <string name="carlos_fern_ndez_garc_a">Carlos Fernández García (Español)</string>
    <string name="mbapp">Mbappé</string>
    <string name="di_mar_a">Di María</string>
    <string name="penalti">Penalti</string>
    <string name="estad_sticas_del_partido">ESTADÍSTICAS DEL PARTIDO</string>
    <string name="goles">Goles</string>
    <string name="tiros_a_gol">Tiros a Gol</string>
    <string name="posesi_n">Posesión</string>
    <string name="equipos">EQUIPOS</string>
    <string name="racha_de_los_ltimos_partidos">ÚLTIMOS ENFRENTAMIENTOS</string>
    <string name="titulo_goles">GOLES</string>
    <string name="titulo_tarjetas">TARJETAS</string>
    <string name="titulo_otros">OTROS</string>
    <string name="entrenador_xavi">Entrenador: Xavi</string>
    <string name="formaci_n_4_4_2">Formación: 4-4-2</string>
    <string name="entrenador_ancelotti">Entrenador: Ancelotti</string>
    <string name="lionel_messi">Lionel Messi</string>
    <string name="delantero">Delantero</string>
    <string name="corners">Corners</string>
    <string name="faltas_libres">Faltas Libres</string>
    <string name="saques_de_puerta">Saques de Puerta</string>
    <string name="fuera_de_juego">Fuera de Juego</string>
    <string name="faltas_cometidas">Faltas</string>
    <string name="posesi_n_de_bal_n">Posesión</string>
    <string name="atajadas">Paradas</string>
    <string name="saques_de_banda">Saques de Banda</string>
    <string name="tiros">Tiros</string>
    <string name="tiros_al_arco">Tiros a Puerta</string>
    <string name="tarjetas_amarillas">Amarillas</string>
    <string name="tarjetas_rojas">Rojas</string>
    <string name="cambios">SUSTITUCIONES</string>
    <string name="_90">90\'</string>
    <string name="_6">6\'</string>
    <string name="action_settings">Settings</string>
    <string name="partidos_jugados">Partidos jugados</string>
    <string name="escudo_equipo_local_image_description">Escudo equipo local</string>
    <string name="escudo_equipo_visitante_image_description">escudo equipo visitante</string>
    <string name="yesterdayMatches">Ayer</string>
    <string name="todayMatches">Hoy</string>
    <string name="allMatches">Todos</string>
    <string name="teamDefaultLogo">https://cdn-icons-png.flaticon.com/128/8373/8373460.png</string>
    <string name="english">English</string>
    <string name="plantilla1">Plantilla del Barcelona</string>
    <string name="plantilla2">Plantilla del Real Madrid</string>
    <string name="plantillas">PLANTILLAS</string>
    <string name="trainer1">Entrenador: Xavi</string>
    <string name="trainer2">Entrenador: Ancelotti</string>
    <string name="argentina">Argentina</string>
    <string name="menu_refresh">Actualiza</string>
</resources>