<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints">

        <!-- Agregar un RelativeLayout para colocar la ImageView en la esquina superior izquierda -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagenLiga"
                android:layout_width="93dp"
                android:layout_height="63dp"
                android:layout_marginStart="0dp"
                android:src="@drawable/liga_easports" />

            <TextView
                android:id="@+id/liga_jornada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="22dp"
                android:textColor="@android:color/white"
                android:text="@string/liga_ea_sports_jornada_10" />

        </LinearLayout>

        <!-- Contenedor de la información del partido -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <!-- Logotipo y nombre del equipo local -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imagenEquipo1"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/logo_barcelona"
                    android:contentDescription="@string/escudo_equipo_local_image_description" />

                <TextView
                    android:id="@+id/nombreEquipo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/barcelona"
                    android:textColor="@android:color/white"
                    />
            </LinearLayout>

            <!-- Estado, fecha y resultado -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/fechaPartido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textSize="12sp"
                    android:text="@string/fecha"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white" />

                <!-- Fecha -->
                <TextView
                    android:id="@+id/minutoPartido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/_90"
                    android:textColor="@android:color/white"
                    />

                <TextView
                    android:id="@+id/resultadoPartido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/resultado"
                    android:textColor="@android:color/white"
                    />

            </LinearLayout>

            <!-- Logotipo y nombre del equipo visitante -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imagenEquipo2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/logo_madrid"
                    android:contentDescription="@string/escudo_equipo_visitante_image_description" />

                <TextView
                    android:id="@+id/nombreEquipo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/madrid"
                    android:textColor="@android:color/white"
                    />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/estadio"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textColor="@android:color/white"
                android:text="@string/camp_nou" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/estadoPartido"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:text="@string/finalizado" />

        </LinearLayout>


        <!-- Otros elementos del AppBarLayout -->

    </com.google.android.material.appbar.AppBarLayout>

    <include
        layout="@layout/content_scrollingbotonera"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="16dp" />

</LinearLayout>
